tests/out/error/if/cond_no_bool.in.bt
fun foo() {}

fun main() {
	if foo {}
	if 123 {}
}
